# gam-bot

./: CONTRIBUTLING.md  Dockerfile  LICENSE  README.md  aerich.ini  docker-compose.yml  pyproject.toml
.github/workflows/: bandit.yml  black.yml  docker-image.yml  linters.yml  mypy.yml  pylint.yml  pytest.yml  release-image.yml
gam_bot/: __main__.py  aiohttp_fixes.py  bot.py  command.py  db.py  easy_messages.py  logs.py  models.py  settings.py  webserver.py
kubernetes/: bot.yaml
migrations/models/: 0_20211024153116_init.sql
src/: manage.py
src/advent_of_code/: _settings.py  apps.py  cog.py
src/async_helpers/: managers.py  mixins.py  querysets.py  utils.py
src/chatbot/: admin.py  bot.py  checks.py  command.py  easy_messages.py  managers.py  model_mixins.py  models.py  querysets.py  tasks.py  test_command.py  test_registry.py  tests.py
src/chatbot/management/commands/: run_bot.py
src/chatbot/migrations/: 0001_initial.py  0002_gamuser_social_score.py  0002_merge_fill_gam_coins_fill_social_score.py  0003_alter_gamuser_social_score.py  0003_auto_20211106_1329.py  0004_alter_gamuser_discord_id.py  0005_emojiscore.py  0005_prediction_predictionchoice_wager.py  0006_rename_bettor_wager_user.py  0007_merge_0005_emojiscore_0006_rename_bettor_wager_user.py  0008_auto_20211105_1909.py  0009_alter_prediction_state.py  fill_discord_bot.py  fill_gam_coins.py  fill_social_score.py
src/dev_utils/: cog.py
src/discord_bot/: __init__.py  _settings.py  admin.py  apps.py  bot.py  checks.py  cog.py  managers.py  models.py
src/discord_bot/management/commands/: run_discord_bot.py
src/discord_bot/migrations/: 0001_initial.py  0002_discorduser_last_known_nickname.py  0003_discorduser_last_known_account_name.py  0004_discorduser_notify_on_startup.py
src/easy_messages/: _settings.py  add_commands.py  cog.py
src/gam/: asgi.py  urls.py  wsgi.py
src/gam/settings/: _django.py  _gam.py  deployment.py  development.py  testing.py
src/gam_coins/: __init__.py  _settings.py  admin.py  apps.py  cog.py  managers.py  models.py  views.py
src/gam_coins/migrations/: 0001_initial.py  0002_prediction_state.py  0003_remove_prediction_open.py
src/gam_coins/templates/: coin_leaderboard.html
src/lmgtfy/: cog.py
src/remind_me/: apps.py  cog.py  models.py
src/remind_me/migrations/: 0001_initial.py
src/social_score/: admin.py  apps.py  cog.py  models.py  tests.py  urls.py  views.py
src/social_score/migrations/: 0001_initial.py
src/social_score/templates/: social_leaderboard.html
tests/: test_command.py  test_example.py  test_registry.py
