[tool.poetry]
name = "gam_bot"
version = "0.0.0"
description = "A fun discord bot for my discord server"
authors = ["Cameron Graybill <camerongraybill@gmail.com>"]
license = "MIT"
packages = [
        {include="manage.py", from="src"},
        {include="gam", from="src"},
        {include="async_helpers", from="src"},
        {include="discord_bot", from="src"},
        {include="easy_messages", from="src"},
        {include="gam_coins", from="src"},
        {include="lmgtfy", from="src"},
        {include="social_score", from="src"},
        {include="dev_utils", from="src"},
    ]

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
Django = "^3.2.8"
psycopg2 = {version = "^2.9.1", optional = true}

[tool.poetry.extras]
prod = ["psycopg2"]

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
pylint = "^2.11.1"
bandit = "^1.7.0"
pytest = "^6.2.5"
types-setuptools = "^57.4.2"
"discord.py-stubs" = "^1.7.3"
pytest-django = "^4.4.0"
django-stubs = "^1.9.0"
pylint-django = "^2.4.4"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.mypy]
files = "src"
plugins = ["mypy_django_plugin.main"]
namespace_packages = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "gam.settings.testing"

[tool.pylint.MASTER]
disable="C,duplicate-code"
load-plugins=["pylint_django"]
django-settings-module="gam.settings.testing"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gam.settings.testing"
python_files = ["test*.py"]
